RESOLVED FIXED171747
TURNS gathering is not working properly
https://bugs.webkit.org/show_bug.cgi?id=171747
Summary TURNS gathering is not working properly
youenn fablet
Reported 2017-05-05 14:09:18 PDT
TURNS gathering is not failing properly when POSIX connect fails. It blocks every other gathering. Let's disable it for now and let's fix the real issue later on.
Attachments
Patch (2.27 KB, patch)
2017-05-05 14:11 PDT, youenn fablet
no flags
Patch (2.20 KB, patch)
2017-05-05 14:44 PDT, youenn fablet
no flags
Patch (3.59 KB, patch)
2017-05-05 22:04 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-05-05 14:11:24 PDT
youenn fablet
Comment 2 2017-05-05 14:44:11 PDT
WebKit Commit Bot
Comment 3 2017-05-05 15:51:00 PDT
Comment on attachment 309214 [details] Patch Clearing flags on attachment: 309214 Committed r216285: <http://trac.webkit.org/changeset/216285>
WebKit Commit Bot
Comment 4 2017-05-05 15:51:01 PDT
All reviewed patches have been landed. Closing bug.
youenn fablet
Comment 5 2017-05-05 22:04:14 PDT
Reopening to attach new patch.
youenn fablet
Comment 6 2017-05-05 22:04:14 PDT
Radar WebKit Bug Importer
Comment 7 2017-05-07 19:21:22 PDT
WebKit Commit Bot
Comment 8 2017-05-08 10:39:41 PDT
Comment on attachment 309268 [details] Patch Clearing flags on attachment: 309268 Committed r216436: <http://trac.webkit.org/changeset/216436>
WebKit Commit Bot
Comment 9 2017-05-08 10:39:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.