TURNS gathering is not working properly https://bugs.webkit.org/show_bug.cgi?id=171747

Patch by Youenn Fablet <youenn@apple.com> on 2017-05-08
Reviewed by Eric Carlson.

Source/ThirdParty/libwebrtc:

* Source/webrtc/base/openssladapter.cc: Adding support for SNI in case of TLS ice candidate gathering.

Source/WebCore:

Covered by manual tests.

* Modules/mediastream/libwebrtc/LibWebRTCPeerConnectionBackend.cpp:
(WebCore::configurationFromMediaEndpointConfiguration): Reveting TURNS ice server skipping.

Canonical link: https://commits.webkit.org/188722@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216436 268f45cc-cd09-0410-ab3c-d52691b4dbfc